--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "embla-carousel-react": "^8.5.1",
     "i18next": "^24.1.2",
     "lucide-react": "^0.468.0",
+    "motion": "^11.15.0",
     "next": "15.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
